FIxed: padding issue for inline alignment for mobile

--- a/assets/css/unminified/style-rtl.css
+++ b/assets/css/unminified/style-rtl.css
@@ -3054,10 +3054,6 @@ body {
   padding-left: 0;
 }
 
-.ast-header-break-point.ast-header-custom-item-outside .header-main-layout-2.mobile-header-order-default .ast-mobile-menu-buttons {
-  padding-bottom: 1em;
-}
-
 /**
  * 4 - Header Inline Logo & Site Title 
 */
@@ -3761,7 +3757,7 @@ li.ast-masthead-custom-menu-items .ast-search-icon .astra-search-icon {
   .ast-header-custom-item-outside.ast-header-break-point .ast-mobile-header-stack.mobile-header-order-1 .site-branding {
     padding-bottom: 0;
   }
-  .ast-header-custom-item-outside.ast-header-break-point .ast-mobile-header-stack.mobile-header-order-2.header-main-layout-2 .ast-mobile-menu-buttons, .ast-header-custom-item-outside.ast-header-break-point .ast-mobile-header-stack.mobile-header-order-5.header-main-layout-2 .ast-mobile-menu-buttons {
+  .ast-header-custom-item-outside.ast-header-break-point .ast-mobile-header-stack.mobile-header-order-2.header-main-layout-2 .ast-mobile-menu-buttons, .ast-header-custom-item-outside.ast-header-break-point .ast-mobile-header-stack.mobile-header-order-2.header-main-layout-1 .ast-mobile-menu-buttons, .ast-header-custom-item-outside.ast-header-break-point .ast-mobile-header-stack.mobile-header-order-5.header-main-layout-2 .ast-mobile-menu-buttons, .ast-header-custom-item-outside.ast-header-break-point .ast-mobile-header-stack.mobile-header-order-5.header-main-layout-1 .ast-mobile-menu-buttons {
     padding-top: 0.8em;
   }
   .ast-header-custom-item-outside.ast-header-break-point .ast-mobile-header-stack.mobile-header-order-3 .ast-mobile-menu-buttons {
@@ -3853,6 +3849,12 @@ li.ast-masthead-custom-menu-items .ast-search-icon .astra-search-icon {
   }
   .ast-header-custom-item-outside.ast-header-break-point .ast-mobile-header-inline .ast-site-identity {
     width: 100%;
+  }
+  .ast-header-custom-item-outside.ast-header-break-point .ast-mobile-header-inline.mobile-header-order-2.header-main-layout-3 .ast-masthead-custom-menu-items {
+    padding-right: 0;
+  }
+  .ast-header-custom-item-outside.ast-header-break-point .ast-mobile-header-inline.mobile-header-order-5.header-main-layout-3 .ast-masthead-custom-menu-items {
+    padding-left: 0;
   }
   .ast-header-custom-item-outside.ast-header-break-point .ast-mobile-header-inline.mobile-header-order-2 .ast-masthead-custom-menu-items.woocommerce-custom-menu-item {
     margin-right: 0;
